--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -2,9 +2,9 @@
 <div>
   <app-selector [selectedItems]="selectedItems" (selectedItemsChange)="updateSelectedItems($event)"></app-selector>
 </div>
-<li>
+<div>
   <app-selected [selected]="selectedItems"></app-selected>
-</li>
+</div>
 
 <!-- 
 Copyright Google LLC. All Rights Reserved.
